welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: illegal start of simple expression
  var ab = a + b;
  ^blueTicket:13: error: Unmatched closing brace '}' ignored here
 }
 ^